--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
-DP_IP=192.168.15.120
-DP_QUEUE=comandas1
+NETBIOS_NAME=printserver
+# Una o varias impresoras: nombre:ip:cola | nombre2:ip2:cola2 | ...
+PRINTERS=sotano:192.168.16.242:sotano|piso1:192.168.16.243:piso1
+IP_CONTAINER=192.168.16.231
+DNS_SERVER=192.168.16.200
