--- a/smb.conf
+++ b/smb.conf
@@ -1,21 +1,30 @@
 [global]
    workgroup = WORKGROUP
+   netbios name = printserver
    server string = Puente DP-301P+
    security = user
    map to guest = Bad User
+
+   # Integración con CUPS
    printing = cups
    printcap name = cups
-   load printers = yes
+   load printers = no
    cups options = raw
+
+   # Protocolos modernos
    min protocol = SMB2
    max protocol = SMB3
+
+   # Logs
    log file = /var/log/samba/%m.log
    log level = 1
 
-[dp301p]
-   comment = Impresora DP-301P+
+[sotano]
+   comment = Impresora Sótano
    path = /var/spool/samba
    printable = yes
+   browseable = yes
    guest ok = yes
    read only = yes
-   printer name = dp301p
+   create mask = 0700
+   printer name = sotano
